--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,13 @@
     "vitest": "^4.0.15"
   },
   "devDependencies": {
-    "jsdom": "^27.3.0"
+    "@biomejs/biome": "2.3.8",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^14.1.0",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "jsdom": "^27.3.0",
+    "semantic-release": "^25.0.2"
   }
 }
