--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -16,7 +16,7 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [22.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,6 +26,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
+
+      - name: Enable Corepack (pnpm)
+        run: |
+          corepack enable
+          corepack prepare pnpm@9 --activate
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -53,6 +58,11 @@ jobs:
         with:
           node-version: 20.x
           cache: 'pnpm'
+
+      - name: Enable Corepack (pnpm)
+        run: |
+          corepack enable
+          corepack prepare pnpm@9 --activate
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
