fix: copy config tests

--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -47,15 +47,12 @@ jobs:
 
       - name: Instalar pnpm
         uses: pnpm/action-setup@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
+          node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-
-      - name: Install pnpm globally
-        run: npm i -g pnpm@9
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
