--- a/.releaserc.json
+++ b/.releaserc.json
@@ -28,7 +28,19 @@
         [
             "@semantic-release/github",
             {
-                "assets": []
+                "assets": [
+                    ""
+                ]
+            }
+        ],
+        [
+            "@semantic-release/git",
+            {
+                "assets": [
+                    "CHANGELOG.md",
+                    "package.json"
+                ],
+                "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
             }
         ]
     ]
