fix: add semantic/git

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -28,9 +28,7 @@
         [
             "@semantic-release/github",
             {
-                "assets": [
-                    ""
-                ]
+                "assets": []
             }
         ],
         [
