--- a/.releaserc.json
+++ b/.releaserc.json
@@ -66,6 +66,12 @@
             }
         ],
         [
+            "@semantic-release/npm",
+            {
+                "npmPublish": false
+            }
+        ],
+        [
             "@semantic-release/github",
             {
                 "assets": []
@@ -78,7 +84,7 @@
                     "CHANGELOG.md",
                     "package.json"
                 ],
-                "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+                "message": "chore(release): ${nextRelease.version}"
             }
         ]
     ]
