--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -36,7 +36,15 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Run unit tests
-        run: pnpm test
+        run: pnpm test:coverage
+
+      - name: Deploy coverage to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./test-results/coverage
+          destination_dir: coverage
 
   release:
     name: Semantic Release (changelog + GitHub Release)
