chore: worklow disable test

--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      run_tests:
+        description: "¿Ejecutar tests antes de la release?"
+        type: boolean
+        default: true      
 
 env:
   NODE_VERSION: 22.x
@@ -15,7 +21,8 @@ permissions:
   id-token: write
 
 jobs:
-  test:
+  tests:
+    if: ${{ inputs.run_tests == 'true' }}
     name: Run tests (Node matrix)
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -49,8 +56,8 @@ jobs:
   release:
     name: Semantic Release (changelog + GitHub Release)
     runs-on: ubuntu-latest
-    needs: test
-    if: ${{ needs.test.result == 'success' }}
+    needs: [tests]
+    if: ${{ needs.tests.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
