--- a/.github/workflows/ci-release-manual.yml
+++ b/.github/workflows/ci-release-manual.yml
@@ -1,9 +1,12 @@
-name: CI and Release (Semantic Release)
+name: Manual Release
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      run_tests:
+        description: "¿Ejecutar tests antes de la release?"
+        type: boolean
+        default: true 
 
 env:
   NODE_VERSION: 22.x
@@ -16,6 +19,7 @@ permissions:
 
 jobs:
   tests:
+    if: ${{ inputs.run_tests == 'true' }}
     name: Run tests (Node matrix)
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -50,7 +54,7 @@ jobs:
     name: Semantic Release (changelog + GitHub Release)
     runs-on: ubuntu-latest
     needs: [tests]
-    if: ${{ needs.tests.result == 'success' }}
+    if: ${{ needs.tests.result == 'success' || inputs.run_tests == 'false' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
