--- a/.github/workflows/ci-release-manual.yml
+++ b/.github/workflows/ci-release-manual.yml
@@ -54,7 +54,7 @@ jobs:
     name: Semantic Release (changelog + GitHub Release)
     runs-on: ubuntu-latest
     needs: [tests]
-    if: ${{ needs.tests.result == 'success' || inputs.run_tests != true }}
+    if: ${{ !inputs.run_tests || needs.tests.result == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
