--- a/.github/workflows/ci-release-manual.yml
+++ b/.github/workflows/ci-release-manual.yml
@@ -19,8 +19,9 @@ permissions:
 
 jobs:
   tests:
-    if: ${{ inputs.run_tests == true }}
     name: Run tests (Node matrix)
+  
+    if: ${{ inputs.run_tests }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
@@ -54,7 +55,7 @@ jobs:
     name: Semantic Release (changelog + GitHub Release)
     runs-on: ubuntu-latest
     needs: [tests]
-    if: ${{ !inputs.run_tests || needs.tests.result == 'success' }}
+    if: ${{ !inputs.run_tests  }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
