--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -20,6 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - uses: ./.github/actions/node-setup
 
       - name: Run unit tests
@@ -39,6 +42,9 @@ jobs:
     needs: [tests]
     if: ${{ needs.tests.result == 'success' }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - uses: ./.github/actions/node-setup
 
       - name: Build project
