chore: remove env en acction

--- a/.github/actions/node-setup/action.yml
+++ b/.github/actions/node-setup/action.yml
@@ -1,22 +1,19 @@
 name: Basic Init Workflow
 
-env:
-  NODE_VERSION: 22.x
-
 inputs:
   node_version:
     description: Node version
     required: false
-    default: ${{ env.NODE_VERSION }}  
+    default: 22
 
 runs:
   using: "composite"
   steps:
     - name: Instalar pnpm
-      uses: pnpm/action-setup@v4
+      uses: pnpm/action-setup@v6
 
     - name: Setup Node.js
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v6
       with:
         node-version: ${{ inputs.node_version }}
         cache: 'pnpm'
