--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -16,12 +16,12 @@ permissions:
 
 jobs:
   tests:
-    name: Run tests (Node matrix)
+    name: Run tests
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - uses: ./.github/actions/node-setup
 
@@ -43,7 +43,7 @@ jobs:
     if: ${{ needs.tests.result == 'success' }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - uses: ./.github/actions/node-setup
 
