--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
     "test": "vitest",
     "build": "vite build",
     "test:coverage": "vitest run --coverage",
