--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,7 @@
         "main",
         {
             "name": "develop",
-            "prerelease": true
+            "prerelease": "beta"
         }
     ],
     "plugins": [
