--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "test": "vitest",
-    "build": "vite build",
+    "build": "vite build --config vite.config.build.js",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test"
   },
